--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-impl</artifactId>
+			<artifactId>jjwt-impl</artifactId> 
 			<version>0.12.3</version>
 			<scope>runtime</scope>
 		</dependency>
@@ -85,6 +85,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId> 
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20250107</version> <!-- Asegúrate de usar la última versión disponible -->
 		</dependency>
 
 		<dependency>
