--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.mail.properties.mail.smtp.writetimeout=3000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 app.upload.dir=./uploads
+spring.mail.properties.mail.smtp.ssl.trust=*
+
 
