--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=marketplacemain
-spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# spring.datasource.url=jdbdbc:sqlserver://localhost:1433;databaseName=marketplace_database;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=marketplace_01;encrypt=false;
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=luis
+spring.datasource.password=Admin1234#
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
